# ios-cmake

./: .gitignore  .travis.yml  LICENCE.md  README.md  ios.toolchain.cmake
.github/: FUNDING.yml  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: catalyst.yml  combined.yml  ios.yml  macos.yml  tvos.yml  visionos.yml  watchos.yml
.travis/: build.sh
example/example-app/example-app.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/example-curl/: CMakeLists.txt
example/example-lib/: CMakeLists.txt  HelloWorld.cpp  HelloWorldIOS.mm  main.cpp
example/example-libressl/: CMakeLists.txt
